[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sense-memory"
version = "0.1.3"
description = "Sovereign persistence for OpenClaw AI agents — encrypted memories on Nostr relays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Humanjava Enterprises", email = "dev@humanjava.com" },
]
keywords = [
    "nostr",
    "memory",
    "persistence",
    "openclaw",
    "ai",
    "sovereign",
    "encrypted",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nostrkey>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://huje.tools"
Repository = "https://github.com/HumanjavaEnterprises/huje.sensememory.OC-python.src"
Documentation = "https://huje.tools"

[tool.hatch.build.targets.wheel]
packages = ["src/sense_memory"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
